# LAB_4_OS

./: README.md
OS_LAB_4/: CMakeLists.txt  CMakePresets.json  OS_LAB_4.cpp  queue_file.cpp  queue_file.h  receiver.cpp  receiver.h  sender.cpp  sender.h  sync_utils.cpp  sync_utils.h  tests.cpp
